--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,8 @@
     <string name="text_button_8">8</string>
     <string name="text_button_9">9</string>
     <string name="text_button_10">10</string>
-    <string name="text_bingo_count">0</string>
+    <!-- unicode for space: \u0020 -->
+    <string name="text_bingo_count">Total :\u0020</string>
     <string name="setting_text">Paramètres</string>
 
     <!-- Settings -->
@@ -22,4 +23,7 @@
     <string name="username_text">Votre nom</string>
     <string name="main_toolbar_title">Bingo LTA</string>
     <string name="settings_toolbar_title">Paramètres</string>
+
+    <string name="username_empty_reply">Veuillez modifier le nom d\'utilisateur dans les options
+        afin de générer des grilles personnalisées</string>
 </resources>
