Adding date display in BingoFragment.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
 
     <string name="username_empty_reply">Veuillez modifier le nom d\'utilisateur dans les options
         afin de générer des grilles personnalisées</string>
+    <string name="date_format">%1\$td/%1\$tm/%1\$tY</string>
 
 
 </resources>
