--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,17 @@
 
     <string name="username_empty_reply">Veuillez modifier le nom d\'utilisateur dans les options
         afin de générer des grilles personnalisées</string>
+
+<!--    Calendar view-->
     <string name="date_format">%1\$td/%1\$tm/%1\$tY</string>
     <string name="calendar_button_text">Aller à la date courante</string>
-
+    
+    <string name="trigram_day_1">LUN</string>
+    <string name="trigram_day_2">MAR</string>
+    <string name="trigram_day_3">MER</string>
+    <string name="trigram_day_4">JEU</string>
+    <string name="trigram_day_5">VEN</string>
+    <string name="trigram_day_6">SAM</string>
+    <string name="trigram_day_7">DIM</string>
 
 </resources>
