--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <!-- Main activity strings -->
     <string name="first_tab_name">Grille</string>
     <string name="second_tab_name">Calendrier</string>
+    <string name="third_tab_name">Statistiques</string>
     <string name="unknown_tab">Onglet inconnu</string>
     <string name="calendar_toast_text">Sélection de la date courante</string>
 
@@ -65,6 +66,11 @@
     <string name="delete_DB_object_no_button_text">Non</string>
     <string name="delete_DB_object_title">Suppression</string>
     <string name="delete_DB_object_message">Voulez-vous supprimer cette entrée de la base de donnée ?</string>
-    <string name="third_tab_name">Statistiques</string>
+
+    <!--    Statistic view-->
+    <string name="average_graph_title">Moyenne par mois</string>
+    <string name="average_graph_x_title">Mois</string>
+    <string name="average_graph_y_title">Moyenne</string>
+    <string name="average_graph_x_label_format">%1$s\n%2$s</string>
 
 </resources>
