--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="floor_pie_chart_tab_title">Etages</string>
     <!--    average per month-->
     <string name="spinner_text_year">Année : </string>
+    <string name="spinner_text_type">Type : </string>
     <string name="average_graph_title">Moyenne par mois</string>
     <!--    floor pie chart-->
     <string name="floor_pie_chart_title">Répartition des étages</string>
