--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,5 @@
     <string name="version_dialog_patch_note_label">Patch notes: </string>
     <string name="version_dialog_positive_button">Install</string>
     <string name="version_dialog_negative_button">Cancel</string>
+    <string name="toast_update_chack_failed">Error during update check</string>
 </resources>
