--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,13 @@
     <string name="floor_21">21</string>
     <string name="floor_18">18</string>
 
+    <string name="update_category_title">Mise à jour</string>
+    <string name="update_now_text">Vérifier les mises à jour</string>
+    <string name="update_frequency_title">Fréquence des mises à jour</string>
+    <string name="daily">Quotidienne</string>
+    <string name="weekly">Hebdomadaire</string>
+    <string name="monthly">Mensuelle</string>
+
     <!--    Calendar view-->
     <string name="date_format">%1\$td/%1\$tm/%1\$tY</string>
     <string name="calendar_button_text">Aller à la date courante</string>
@@ -84,8 +91,6 @@
     <string name="floor_pie_chart_title">Répartition des étages</string>
 
     <!-- Updater -->
-    <string name="update_category_title">Mise à jour</string>
-    <string name="update_now_text">Vérifier les mises à jour</string>
     <string name="version_dialog_title">Nouvelle mise à jour disponible</string>
     <string name="version_dialog_version_label">Numéro de version : %1$s</string>
     <string name="version_dialog_download_size_label">Taille du téléchargement : %1$s</string>
