Ajout d'un onglet donnant les moyennes par jour

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -50,12 +50,14 @@
     <string name="delete_DB_object_no_button_text">No</string>
     <string name="delete_DB_object_title">Deletion</string>
     <string name="delete_DB_object_message">Do you want to delete this database entry?</string>
-    <string name="average_month_tab_title">Average</string>
+    <string name="average_month_tab_title">Average per month</string>
     <string name="floor_pie_chart_tab_title">Floors</string>
+    <string name="average_day_tab_title">Average per day</string>
     <string name="spinner_text_year">Year:</string>
     <string name="spinner_text_type">Type:</string>
-    <string name="average_graph_title">Average per month</string>
+    <string name="average_month_graph_title">Average per month</string>
     <string name="floor_pie_chart_title">Floor repartition</string>
+    <string name="average_day_graph_title">Average per day</string>
     <string name="year_spinner_all_option">All</string>
     <string name="floor_layout_title">Floor</string>
     <string name="floor_21">21</string>
