--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-
-    <!-- App level strings -->
     <string name="app_name">BingoEtage</string>
-
-
-    <!-- Main activity strings -->
-    <string name="first_tab_name">Grille</string>
-    <string name="second_tab_name">Calendrier</string>
-    <string name="third_tab_name">Statistiques</string>
-    <string name="unknown_tab">Onglet inconnu</string>
-    <string name="calendar_toast_text">Sélection de la date courante</string>
-
-
-    <!-- Bingo fragment strings -->
+    <string name="first_tab_name">Grid</string>
+    <string name="second_tab_name">Calendar</string>
+    <string name="third_tab_name">Statistics</string>
+    <string name="unknown_tab">Unknown tab</string>
+    <string name="calendar_toast_text">Selecting current day</string>
+    <string name="setting_text">Parameters</string>
+    <string name="text_bingo_count">Total : %1$s</string>
     <string name="text_button_1">1</string>
     <string name="text_button_2">2</string>
     <string name="text_button_3">3</string>
@@ -24,86 +18,59 @@
     <string name="text_button_8">8</string>
     <string name="text_button_9">9</string>
     <string name="text_button_10">10</string>
-    <!-- unicode for space: \u0020 -->
-    <!-- %1$s : format string   -->
-    <string name="text_bingo_count">Total : %1$s</string>
-    <string name="setting_text">Paramètres</string>
-    <string name="text_ok_button">Valider</string>
-    <string name="description_edit_button">Editer</string>
-
-
-    <!-- Calendar fragment strings -->
+    <string name="text_ok_button">Validate</string>
+    <string name="description_edit_button">Edit</string>
     <string name="calendar_header_date">%1$s %2$s</string>
-    <string name="calendar_header_average">Moyenne : %.2f</string>
-
-
-    <!-- Settings strings -->
-    <string name="theme_title">Choix du thème</string>
-    <string name="theme_system">Système</string>
-    <string name="theme_light">Thème clair</string>
-    <string name="theme_dark">Thème nuit</string>
-
-    <string name="username_text">Votre nom</string>
-    <string name="main_toolbar_title">Bingo des étages</string>
-    <string name="settings_toolbar_title">Paramètres</string>
-
-    <string name="username_empty_reply">Veuillez modifier le nom d\'utilisateur dans les options
-        afin de générer des grilles personnalisées</string>
-
-    <string name="floor_layout_title">Etage</string>
+    <string name="calendar_header_average">Average: %.2f</string>
+    <string name="theme_title">Theme choice</string>
+    <string name="theme_system">System</string>
+    <string name="theme_light">Day theme</string>
+    <string name="theme_dark">Night theme</string>
+    <string name="username_text">Your name</string>
+    <string name="main_toolbar_title">Floor bingo</string>
+    <string name="settings_toolbar_title">Parameters</string>
+    <string name="username_empty_reply">Please change the username in the parameters to generate personalized grids</string>
+    <string name="update_category_title">Update</string>
+    <string name="update_now_text">Update now</string>
+    <string name="update_frequency_title">Update frequency</string>
+    <string name="daily">Daily</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
+    <string name="never">Never</string>
+    <string name="date_format">%1\$tm/%1\$td/%1\$tY</string>
+    <string name="calendar_button_text">Go to current date</string>
+    <string name="trigram_day_1">MON</string>
+    <string name="trigram_day_2">TUE</string>
+    <string name="trigram_day_3">WED</string>
+    <string name="trigram_day_4">THU</string>
+    <string name="trigram_day_5">FRI</string>
+    <string name="trigram_day_6">SAT</string>
+    <string name="trigram_day_7">SUN</string>
+    <string name="delete_DB_object_yes_button_text">Yes</string>
+    <string name="delete_DB_object_no_button_text">No</string>
+    <string name="delete_DB_object_title">Deletion</string>
+    <string name="delete_DB_object_message">Do you want to delete this database entry?</string>
+    <string name="average_month_tab_title">Average per month</string>
+    <string name="floor_pie_chart_tab_title">Floors</string>
+    <string name="average_day_tab_title">Average per day</string>
+    <string name="spinner_text_year">Year:</string>
+    <string name="spinner_text_type">Type:</string>
+    <string name="average_month_graph_title">Average per month</string>
+    <string name="floor_pie_chart_title">Floor repartition</string>
+    <string name="average_day_graph_title">Average per day</string>
+    <string name="year_spinner_all_option">All</string>
+    <string name="floor_layout_title">Floor</string>
     <string name="floor_21">21</string>
     <string name="floor_18">18</string>
     <string name="floor_17">17</string>
-
-    <string name="update_category_title">Mise à jour</string>
-    <string name="update_now_text">Vérifier les mises à jour</string>
-    <string name="update_frequency_title">Fréquence des mises à jour</string>
-    <string name="daily">Quotidienne</string>
-    <string name="weekly">Hebdomadaire</string>
-    <string name="monthly">Mensuelle</string>
-    <string name="never">Jamais</string>
-
-    <!--    Calendar view-->
-    <string name="date_format">%1\$td/%1\$tm/%1\$tY</string>
-    <string name="calendar_button_text">Aller à la date courante</string>
-
-    <string name="trigram_day_1">LUN</string>
-    <string name="trigram_day_2">MAR</string>
-    <string name="trigram_day_3">MER</string>
-    <string name="trigram_day_4">JEU</string>
-    <string name="trigram_day_5">VEN</string>
-    <string name="trigram_day_6">SAM</string>
-    <string name="trigram_day_7">DIM</string>
-
-    <string name="delete_DB_object_yes_button_text">Oui</string>
-    <string name="delete_DB_object_no_button_text">Non</string>
-    <string name="delete_DB_object_title">Suppression</string>
-    <string name="delete_DB_object_message">Voulez-vous supprimer cette entrée de la base de donnée ?</string>
-
-    <!--    Statistic view-->
-    <string name="average_month_tab_title">Moyenne mois</string>
-    <string name="floor_pie_chart_tab_title">Etages</string>
-    <string name="average_day_tab_title">Moyenne jour</string>
-    <string name="year_spinner_all_option">Toutes</string>
-    <!--    average per month-->
-    <string name="spinner_text_year">Année : </string>
-    <string name="spinner_text_type">Type : </string>
-    <string name="average_month_graph_title">Moyenne par mois</string>
     <string name="spinner_type_option_1">Bingo</string>
-    <string name="spinner_type_option_2">Arrêts</string>
-    <!--    floor pie chart-->
-    <string name="floor_pie_chart_title">Répartition des étages</string>
-    <!--    average per month-->
-    <string name="average_day_graph_title">Moyenne par jour</string>
-
-    <!-- Updater -->
-    <string name="version_dialog_title">Nouvelle mise à jour disponible</string>
-    <string name="version_dialog_version_label">Numéro de version : %1$s</string>
-    <string name="version_dialog_download_size_label">Taille du téléchargement : %1$s</string>
-    <string name="version_dialog_patch_note_label">Notes de mise à jour : </string>
-    <string name="version_dialog_positive_button">Installer</string>
-    <string name="version_dialog_negative_button">Annuler</string>
-    <string name="toast_update_check_failed">Impossible de vérifier la disponibilité de mise à jour</string>
-    <string name="toast_update_uptodate">L\'application est à jour</string>
-
+    <string name="spinner_type_option_2">Stops</string>
+    <string name="version_dialog_title">New update available</string>
+    <string name="version_dialog_version_label">Version: %1$s</string>
+    <string name="version_dialog_download_size_label">Download size: %1$s</string>
+    <string name="version_dialog_patch_note_label">Patch notes: </string>
+    <string name="version_dialog_positive_button">Install</string>
+    <string name="version_dialog_negative_button">Cancel</string>
+    <string name="toast_update_check_failed">Error during update check</string>
+    <string name="toast_update_uptodate">The application is up-to-date</string>
 </resources>
