--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,8 @@
 
     <string name="csv_import_complete_toast_text">CSV import complete</string>
     <string name="csv_import_error_toast_text">Error during CSV import</string>
+    <string name="csv_import_alert_dialog_title">Warning</string>
+    <string name="csv_import_alert_dialog_message">This action will delete the current database and its replacement by the data contained in the selected file.\nDo you want to proceed?</string>
+    <string name="csv_import_alert_dialog_pos_button">Yes</string>
+    <string name="csv_import_alert_dialog_neg_button">No</string>
 </resources>
